test_programs/compile_failure/negate_unsigned/src/main.nr
fn main() {
    let var = -(1 as u8);
    std::println(var);
}
